# rust-web-api-server-sample

./: README.md  docker-compose.yml  heroku.yml
.github/workflows/: deploy-to-heroku.yml
db/: Dockerfile
db/docker-entrypoint-initdb.d/: init.sql  setup.sql
front/: package-lock.json  package.json
front/pages/: _app.js  home.js  index.js
server/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  diesel.toml  heroku.yml
server/migrations/2021-12-27-141023_create_table/: down.sql  up.sql
server/src/: auth.rs  config.rs  lib.rs  main.rs  schema.rs
server/src/application/: mod.rs  pokemon_application.rs  pokemon_data.rs  pokemon_delete_service.rs  pokemon_get_service.rs  pokemon_list_service.rs  pokemon_register_service.rs  pokemon_update_service.rs
server/src/domain/models/pokemon/: mod.rs  pokemon.rs  pokemon_name.rs  pokemon_number.rs  pokemon_repository.rs  pokemon_type.rs  pokemon_types.rs
server/src/domain/services/: mod.rs  pokemon_repository.rs
server/src/infra/: mod.rs
server/src/infra/actix/: handlers.rs  mod.rs  request.rs  router.rs
server/src/infra/diesel/: mod.rs  pokemon_repository.rs  schema.rs
