[package]
name = "actix_web_sample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"
dotenv = "0.15.0"
serde = {version = "1.0.131", features = ["derive"]}
lazy_static = "1.4.0"
once_cell = "1.9.0"

log = "0.4.0"
simplelog = "0.11.1"
getset = "0.1.2"

actix-web = "4.1.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
chrono = "0.4.19"
r2d2 = "0.8.9"
anyhow = { version = "1", features = ["backtrace"] }
actix-web-httpauth = "0.8.0"
alcoholic_jwt = "4091.0.0"
reqwest = { version = "0.11.10", features = ["json"] }
